
add_subdirectory(DstExample)
add_subdirectory(Tutorial)
add_subdirectory(StreamingExample)
add_subdirectory(EventGroupExample)
add_subdirectory(MetadataExample)
add_subdirectory(BlockExample)
add_subdirectory(SubeventExample)
add_subdirectory(SubeventCUDAExample)
add_subdirectory(UnitTestingExample)
add_subdirectory(PodioExample)